# ItalgiureCivileScraper

./: .env.template  README.md  main.py  pyproject.toml  settings.py
.github/workflows/: linting.yml  typing.yml
src/helpers/: __init__.py  collectLegalRecords.py  downloadPdfFromItalgiure.py  uploadToHuggingFace.py
src/models/: CourtSection.py  DatabaseKind.py  ItalgiureSolrQuery.py  LegalDocument.py  SortOrder.py  __init__.py
