[project]
name = "italgiurecivilescraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.1.0",
    "ruff>=0.6.4",
    "ty>=0.0.8",
]
