[project]
name = "italgiurecivilescraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.4.0",
    "requests>=2.32.5",
    "tqdm>=4.66.4",
    "urllib3>=2.2.2",
    "pyarrow>=17.0.0",
    "huggingface-hub>=0.24.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.1.0",
    "ruff>=0.6.4",
    "ty>=0.0.8",
]
